Renaming and resorting of template categories.

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -330,7 +330,7 @@ MENU_CREATE_MULTICASTSE=Multicast Event Source
 CTL_Class_name_format={C}
 
 # Filenames
-Templates/Beans=Beans
+Templates/Beans=Java Beans
 Templates/Beans/Bean.java=Bean
 Templates/Beans/BeanInfo.java=BeanInfo
 Templates/Beans/Customizer.java=Customizer
