--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -807,7 +807,7 @@ Templates/GUIForms/Dialogs=Sample Forms
 Templates/GUIForms/Dialogs/Application.java=Application
 Templates/GUIForms/Dialogs/MDIApplication.java=MDI Application
 Templates/GUIForms/Dialogs/OkCancelDialog.java=OK / Cancel Dialog
-Templates/GUIForms=GUI Forms
+Templates/GUIForms=Java GUI Forms
 Templates/GUIForms/JApplet.java=JApplet
 Templates/GUIForms/JDialog.java=JDialog
 Templates/GUIForms/JFrame.java=JFrame
