--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -118,7 +118,7 @@ PROP_scriptingLanguage=Scripting Language
 HINT_scriptingLanguage=Language this page uses for scripting
 
 # Filenames
-Templates/JSP_Servlet=JSP & Servlet
+Templates/JSP_Servlet=JSPs & Servlets
 Templates/JSP_Servlet/JSP.jsp=JSP
 Templates/JSP_Servlet/Servlet.java=Servlet
 
