--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -32,14 +32,16 @@ CTL_DiffSettings=Diff Settings
 # PatchAction
 CTL_PatchActionName=Apply Patch...
 EXC_PatchParsingFailed=Parsing of the patch file failed: {0}
-TITLE_SelectPatch=Select The Patch For {0}
+TITLE_SelectPatchForFile=Select The Patch For {0}
+TITLE_SelectPatchForFolder=Select The Patch For Files In {0}
 BTN_Patch=Patch
 BTN_Patch_mnc=P
 BTN_Patch_tooltip=Select the patch file to apply.
 MSG_NoDifferences=No differences found in file {0}.
 EXC_PatchApplicationFailed=Application of the patch failed: {0}
-EXC_CopyOfAppliedPatchFailed=Copy of the applied patch failed ({0}). The applied file is at {1}.
-MSG_PatchAppliedSuccessfully=Patch applied successfully.
+EXC_CopyOfAppliedPatchFailed=The patch application failed, it's not possible to write to {0}.
+MSG_NotFoundFiles=Following files were to be patched, but not found: {0}
+MSG_PatchAppliedSuccessfully=Patch applied successfully. View applied changes?
 
 # DiffSettingsBeanInfo
 PROP_diffService=Default Diff Service
