Find correctly the child file in a folder, When the patch application fails, report the file name.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -38,9 +38,9 @@ BTN_Patch=Patch
 BTN_Patch_mnc=P
 BTN_Patch_tooltip=Select the patch file to apply.
 MSG_NoDifferences=No differences found in file {0}.
-EXC_PatchApplicationFailed=Application of the patch failed: {0}
+EXC_PatchApplicationFailed=Application of the patch to ''{1}'' failed: {0}
 EXC_CopyOfAppliedPatchFailed=The patch application failed, it's not possible to write to {0}.
-MSG_NotFoundFiles=Following files were to be patched, but not found: {0}
+MSG_NotFoundFiles=Following files are to be patched, but not found: {0}
 MSG_PatchAppliedSuccessfully=Patch applied successfully. View applied changes?
 
 # DiffSettingsBeanInfo
