--- a/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
+++ b/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
@@ -20,9 +20,11 @@ MSG_parser_plug=Using JAXP parser at {0}.
 MSG_parser_no_schema=Warning: Parser does not support XML Schema-based validation, it requires DOCTYPE!
 MSG_parser_no_schema_loc=Warning: Parser does not support specifing XML Schema location.
 # {0}=PublicID, {1}=system ID
-MSG_resolver_1=Note: Cannot resolve {0} defaulting to {1}.
+MSG_resolver_1=Parsing entity at "{1}"...
 # {0}=PublicID, {1}=system ID
-MSG_resolver_2=Warning: Cannot resolve {0} using suspicious default {1}.
+MSG_resolver_2=Warning: "{0}" resolved to "{1}".
+# {0}=PublicID, {1}=system ID
+MSG_resolver_3=Warning: Cannot resolve "{0}" to URL, using "{1}"...
 MSG_too_many_errs=Too many errors, stopping further checking.
 MSG_platform_parser=Using Java platform XML parser (one in rt.jar).
 # {0} stays for parser class name
@@ -30,5 +32,5 @@ MSG_unknown_parser=Using {0} XML parser implementation from unknown location.
 # {0} message of original exception
 EX_parser_ierr=Probably internal parser error: {0}
 MSG_not_a_doc=Error: Validation can be used only for XML Documents!
-MSG_no_pid=Empty public ID
+MSG_no_pid=<missing public ID>
 # ---
