--- a/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
+++ b/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
@@ -20,7 +20,7 @@ MSG_parser_plug=Using JAXP parser at {0}.
 MSG_parser_no_schema=Warning: Parser does not support XML Schema-based validation, it requires DOCTYPE!
 MSG_parser_no_schema_loc=Warning: Parser does not support specifing XML Schema location.
 # {0}=PublicID, {1}=system ID
-MSG_resolver_1=Parsing entity at "{1}"...
+MSG_resolver_1=Referenced entity at "{1}".
 # {0}=PublicID, {1}=system ID
 MSG_resolver_2=Warning: "{0}" resolved to "{1}".
 # {0}=PublicID, {1}=system ID
