--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -39,7 +39,7 @@ DESC_error_loading=Error: {0}
 DESC_loaded=Sucessfully loaded and active.
 
 ## CatalogBeanInfo.java
-PROP_Catalog=Sun Resolver 1.1
+PROP_Catalog=OASIS Catalog Resolver
 PROP_Catalog_desc=Implements OASIS XML Catalog and TR9401 standards.
 PROP_catalog_name=Catalog Name
 PROP_catalog_name_desc=Name that identifies catalog.
