--- a/core.ui/build.xml
+++ b/core.ui/build.xml
@@ -34,9 +34,7 @@ Microsystems, Inc. All Rights Reserved.
                     <include name="openide*.jar" />
                 </fileset>
 				<!--
-                <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
                 <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
-                <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/>
 				-->
             </classpath>
         </javac>
@@ -55,14 +53,7 @@ Microsystems, Inc. All Rights Reserved.
         </locjar>
     </target>
 
-    <target name="release">
-<!--
-        <mkdir dir="netbeans/lib/autoload/ext"/>
-        <copy file="${binroot}/core/release/lib/ext/jh.jar" tofile="netbeans/modules/autoload/ext/jh-1.1.2_02.jar"/>
--->
-    </target>
-
-    <target name="netbeans" depends="jars,release">
+    <target name="netbeans" depends="jars">
         <genlist targetname="nbm" outputfiledir="../../nbbuild/netbeans"/>
     </target>
 
@@ -72,25 +63,9 @@ Microsystems, Inc. All Rights Reserved.
                  module="netbeans/lib/core-ui.jar"
                  homepage="http://core.${homepage.base}/"
                  distribution="http://${dist.base}/core-ui.nbm">
-            <license name="core-ui-license.txt">
-                <text>For the core-ui module:</text>
-                <file location="${license.file}"/>
-                <!-- 
-		<text>For the bundled JavaHelp runtime library:</text> 
-                <file location="javahelp-license.txt"/>
-		-->
-            </license>
+            <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
-    </target>
-
-    <target name="test-build" depends="jars">
-        <mkdir dir="reload/ext"/>
-        <copy file="netbeans/lib/core-ui.jar" tofile="reload/core-ui.jar"/>
-        <!-- <copy file="${binroot}/core/release/lib/ext/jh.jar" tofile="reload/ext/jh-1.1.2_02.jar"/> -->
-    </target>
-    <target name="test" depends="test-build">
-        <nbinstaller module="reload/core-ui.jar" action="reinstall"/>
     </target>
 
     <target name="clean">
@@ -103,10 +78,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="core-ui.nbm"/>
         <delete dir="Info"/>
         <delete file="manifest-subst.mf"/>
-    </target>
-
-    <target name="real-clean" depends="clean">
-        <delete dir="reload"/>
     </target>
 
 </project>
