Adding descriptive name to MIME resolver

--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -132,6 +132,7 @@ Templates/JSP_Servlet/Listeners/ContextAttributeListener.java=Servlet Context At
 Templates/JSP_Servlet/Listeners/SessionListener.java=Http Session Listener
 Templates/JSP_Servlet/Listeners/SessionAttributeListener.java=Http Session Attribute Listener
 
+Services/MIMEResolver/org-netbeans-modules-web-core-resources-mime-resolver.xml=Web Application files
 Services/org-netbeans-modules-web-core-ServletSettings.settings=JSP & Servlet
 # Javadoc
 Mount/java/org-netbeans-modules-web-core-resources-library-servlet.xml=Servlet 2.3 API Library
