Fixed 24348 and added initial config impl

--- a/editor/src/org/netbeans/modules/editor/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/Bundle.properties
@@ -24,3 +24,7 @@ Templates/Services/IndentEngine/org-netbeans-modules-editor-html-LineWrapIndentE
 
 MSG_NegativeValue=Negative value is not allowed
 MSG_OutOfRange=Value is out of range
+
+CTL_Toolbar_name={0} Toolbar
+CTL_Toolbar_hint=Toolbar contents customization
+PROP_addToolbarSeparator=Add Separator
